--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @string{aps = {American Physical Society,}}
+
 @article{lee2024supervised,
   title = {Supervised {{Optimization Framework}} for {{Charging}} and {{Discharging Controls}} of {{Battery Energy Storage}}},
   author = {Lee, Jaehwan and Kwon, Soongeol},
@@ -13,5 +14,6 @@
   pages = {5610--5621},
   selected = {true},
   issn = {1949-3053},
-  doi = {10.1109/TSG.2024.3416369}
+  doi = {10.1109/TSG.2024.3416369},
+  abbr = {IEEE TSG}
 }
